--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                 <h1 id="pink">pinkflare</h1>
 <div id="sidepurple">
-    <img src="C:\Users\Ravi Computer\Desktop\abc.png" alt="">
+    <img src="abc.png" alt="">
 </div> 
 
 
